# experiments-ltn-2024

./: .dockerignore  .gitignore  Dockerfile  README.md  bump_version.py  pyproject.toml  renovate.json
.github/workflows/: check.yml
examples/: binary_classification.ipynb  declared_variables.ipynb  generator.py  models.py  multi_class.ipynb  multi_class_classification.ipynb  regression.ipynb  square_circle.ipynb  square_circle.py  test.ipynb  test_nltk.ipynb  train_models_seperatly.ipynb  two_inputs.ipynb  two_predicates.ipynb  wrong_format.ipynb
examples/circle_square/: circle_square_config.yaml  generator.py  train_models_seperatly.ipynb
examples/classification/: binary_classification.ipynb  binary_config.yaml  multi_class.ipynb  multi_config.yaml
examples/kinship/: demo.ipynb
examples/kinship/kinship_embeddings/: results.json  trained_model.pkl
examples/medical/: medical.ipynb  medical_config.yaml  test.ipynb  test_suite.ipynb  with_logic.yaml  without_logic.yaml
examples/medical/breast_cancer/: config.yaml  demo.ipynb
examples/medical/diabetes/: config.yaml  demo.ipynb  drop_results_df.pkl  flip_results_df.pkl  noise_results_df.pkl  roboustness.py  significance_tests.py  test.ipynb
examples/medical/models/: DecisionTree_best_model.pkl  GradientBoosting_best_model.pkl  KNearestNeighbor_best_model.pkl  LogisticRegression_best_model.pkl  MultiLayerPerceptron_best_model.pkl  RandomForest_best_model.pkl
examples/parsing/: test.ipynb  test.yaml
examples/poker/: Dockerfile  config.yaml  demo.ipynb  training_script.py
examples/poker/dataset/: val.csv
examples/regression/: regression.ipynb  regression_config.yaml
examples/simple/classification/: binary_classification.ipynb  multi_class.ipynb  multi_config.yaml
examples/simple/regression/: regression.ipynb  regression_config.yaml
examples/smokes_friends_cancer/: config.yaml  demo.ipynb
examples/two_dataloaders/: demo.ipynb
examples/yaml/: test.ipynb  test.yaml
examples/zoo/: config.yaml  demo.ipynb
ltn/fuzzy_operators/: functions.py  quantifiers.py
ltn_imp/: visitor.py
ltn_imp/automation/: data_loaders.py  knowledge_base.py  network_factory.py
ltn_imp/examples/: binary_classification.ipynb
ltn_imp/fuzzy_operators/: aggregators.py  connectives.py  predicates.py  quantifiers.py
ltn_imp/fuzzy_operators/diagrams/: connective.puml
ltn_imp/parsing/: __init__.py  ancillary_modules.ipynb  ancillary_modules.py  custom_parser.py  expression_transformations.py  expressions.py  fol_parser.ebnf  parser.py  parser_generator.py  test.ipynb  yaml_parsing.py
tests/ancillary_tests/: ancillary_test.py
tests/knowladge_base_tests/: knowladge_base_test.py
tests/learning_tests/: learning_test.py
tests/operator_tests/: aggregators_test.py  connectives_test.py  quantifiers_test.py  satisfaction_operator_test.py
tests/parsing_tests/: parse_test.py
tests/torch_tests/: grad_test.py
(+7 files in other folders)
